@@ -70,8 +70,9 @@ const char * mosaic_icon_filenames[mosaic_NUM_TOOLS] = {
 const char * mosaic_names[mosaic_NUM_TOOLS] = {
   gettext_noop("Mosaic"),
 };
-const char * mosaic_descs[mosaic_NUM_TOOLS] = {
-  gettext_noop("Click to add a mosaic effect to the image."),
+const char * mosaic_descs[mosaic_NUM_TOOLS][2] = {
+  {gettext_noop("Click and move the mouse to add a mosaic effect to the image."),
+    gettext_noop("Click to add a mosaic effect to the entire image."),},
 };
 
 Uint32 mosaic_api_version(void) { return(TP_MAGIC_API_VERSION); }
@@ -110,8 +111,8 @@ char * mosaic_get_name(magic_api * api, int which){
 }
 
 // Return our descriptions, localized:
-char * mosaic_get_description(magic_api * api, int which){
-  return(strdup(gettext(mosaic_descs[which])));
+char * mosaic_get_description(magic_api * api, int which, int mode){
+  return(strdup(gettext(mosaic_descs[which][mode-1])));
 }
 
 //Calculates the grey scale value for a rgb pixel
